--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ body {
 
 .title {
   font-family: 'Great Vibes', cursive;
-  font-size: 100px;
+  font-size: 120px;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .soontm {
@@ -26,4 +28,15 @@ body {
   bottom: 1%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+
+@media screen and (max-width: 800px) {
+  .title {
+    font-size: 80px;
+  }
+
+  .soontm {
+    font-size: 20px;
+  }
 }
