adding stolen colors

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #000;
-  color: #fff;
+  background-color: #12110f;
+  color: #ffffe8;
   font-family: 'Raleway', sans-serif;
 }
 
