--- a/style.css
+++ b/style.css
@@ -1,14 +1,44 @@
 body {
-  background-color: #12110f;
-  color: #ffffe8;
-  font-family: 'Raleway', sans-serif;
+ margin: 0
+}
+
+a {
+  line-height: 25px;
+  border-bottom: 1px solid transparent;
+}
+
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: 1px solid currentColor;
+  text-decoration: none;
+}
+
+.navbar {
+  padding: 10px 100px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.navbar-button {
+  margin: 0 20px;
 }
 
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  translate: 0 50%;
+}
+
+.home {
+  background-color: #12110f;
+  color: #ffffe8;
+  font-family: 'Raleway', sans-serif;
+  height: 100vh
 }
 
 .title {
@@ -21,14 +51,106 @@ body {
 
 .soontm {
   font-size: 40px;
+  padding: 20px 100px;
   text-align: center;
 }
 
 .footer {
-  position: fixed;
-  bottom: 1%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+}
+
+.shop {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: lightgrey;
+  color: #0000000;
+  font-family: 'Raleway', sans-serif;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.shop-title {
+  font-family: 'Great Vibes', cursive;
+  font-size: 120px;
+  /* padding: 30px 0; */
+  text-align: center;
+  white-space: nowrap;
+}
+
+.shop .centered {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  translate: 0;
+  height: 1080px;
+  overflow: hidden;
+}
+
+.shop .product {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px;
+  width: 250px;
+  height: 500px;
+  overflow: hidden;
+}
+
+.shop .product:hover {
+  border-bottom: 1px solid currentColor;
+  text-decoration: none;
+}
+
+.shop .product-image {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.shop .product-description {
+  height: 50px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.shop .footer {
+  height: 350px;
+  padding: 0 100px;
+}
+
+.shop .footer .footer-title {
+  font-size: 40px;
+}
+
+.shop .footer .footer-description {
+  margin-top: 10px;
+}
+
+.blog {
+  background-color: #f9f7f4;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.blog .centered {
+  margin-top: 50px;
+  translate: 0;
+}
+
+.blog .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 100px;
+}
+
+.blog .container .post {
+  padding: 50px;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 10px 0 rgb(0 0 0 / 15%);
 }
 
 
@@ -39,5 +161,12 @@ body {
 
   .soontm {
     font-size: 20px;
+    padding: 100px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .shop .centered {
+    height: 1080px;
   }
 }
