--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a:hover {
   font-size: 120px;
   text-align: center;
   white-space: nowrap;
-  text-shadow: 20px 10px 10px #000;
+  /* text-shadow: 20px 10px 10px #000; */
 }
 
 .soontm {
